<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
      android:id="@+id/edt_date"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:hint="@string/date"
      android:layout_margin="@dimen/margin_standard"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <EditText
      android:id="@+id/edt_time"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:hint="@string/time"
      android:layout_margin="@dimen/margin_standard"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/edt_date" />

    <EditText
      android:id="@+id/edt_content"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:hint="@string/content"
      android:layout_margin="@dimen/margin_standard"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/edt_time" />

    <Button
      android:id="@+id/btn_save"
      android:text="@string/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_standard"
      app:layout_constraintTop_toBottomOf="@id/edt_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>