<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_margin="@dimen/margin_standard"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:cardCornerRadius="@dimen/rounded_corner_radius">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/const_new_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?selectableItemBackground"
    android:padding="@dimen/margin_standard"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
      android:id="@+id/txt_new_word_word"
      style="@style/TextAppearance.Hibi.ResultItemPrimary"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_standard"
      android:text="@string/japanese_word_wc"
      app:layout_constraintEnd_toStartOf="@id/txt_new_word_part"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/txt_new_word_part"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/type"
      android:textAppearance="@style/TextAppearance.Hibi.ResultItemTertiary"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/txt_new_word_reading"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/reading_wc"
      style="@style/TextAppearance.Hibi.ResultItemPrimary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txt_new_word_word" />

    <TextView
      android:id="@+id/txt_new_word_english"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/english"
      android:textAppearance="@style/TextAppearance.Hibi.ResultItemSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txt_new_word_reading" />

    <TextView
      android:id="@+id/txt_new_word_notes"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/notes_wc"
      android:textAppearance="@style/TextAppearance.Hibi.ResultItemTertiary"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txt_new_word_english" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>